# grace

./: .autotools  .cproject  .cvsignore  .gitignore  .project  CHANGES  COPYRIGHT  INSTALL  MIGRATION  Make.lib  Makefile  README  README.FFTW  cmath.h  dotest  grace.pro  gracerc.sample
T1lib/: Makefile  README  README.t1lib  README.t1lib-0.8-beta
T1lib/t1lib/: .dependencies  Makefile  parseAFM.c  parseAFM.h  sysconf.h  t1aaset.c  t1aaset.h  t1afmtool.c  t1afmtool.h  t1base.c  t1base.h  t1delete.c  t1delete.h  t1enc.c  t1enc.h  t1env.c  t1env.h  t1extern.h  t1finfo.c  t1finfo.h  t1global.h  t1lib.h  t1load.c  t1load.h  t1misc.h  t1outline.c  t1outline.h  t1set.c  t1set.h  t1subset.c  t1subset.h  t1trans.c  t1trans.h  t1types.h
T1lib/type1/: .dependencies  Makefile  arith.c  curves.c  fontfcn.c  fontstruct.h  hints.c  objects.c  objects.h  paths.c  regions.c  scanfont.c  spaces.c  t1io.c  t1stdio.h  t1stub.c  type1.c  util.c
Xbae/: Actions.c  Actions.h  Cell.c  Cell.h  CellP.h  Clip.c  Clip.h  ClipP.h  Converters.c  Converters.h  Create.c  Create.h  Draw.c  Draw.h  Input.c  Input.h  InputP.h  LICENSE  Macros.h  Make.common  Makefile  Matrix.c  Matrix.h  MatrixP.h  Methods.c  Methods.h  Public.c  ScrollMgr.c  ScrollMgr.h  Shadow.c  Shadow.h  Utils.c  Utils.h  patchlevel.h
Xbae/Xbae/: Actions.c  Actions.h  Clip.c  Clip.h  ClipP.h  Converters.c  Converters.h  Create.c  Create.h  Draw.c  Draw.h  Input.c  Input.h  InputP.h  LICENSE  Macros.h  Makefile  Matrix.c  Matrix.h  MatrixP.h  Methods.c  Methods.h  Public.c  ScrollMgr.c  ScrollMgr.h  Shadow.c  Shadow.h  Utils.c  Utils.h
ac-tools/: Make.conf.in  aclocal.m4  config.guess  config.h.in  configure.in  ice_check_decl.m4  ice_check_lesstif.m4  ice_find_motif.m4  mdw_check_manylibs.m4  mkinstalldirs  shtool
arch/os2/: Make.conf.os2  README  config.h.os2  configos2.cmd  dlfcn.c  dlfcn.h  dotest.cmd
arch/vms/: base.mms  build.com  canvas.mms  config.h-common  config.h-dpml  config.h-no_dpml  config.h-vms6  config.h-vms7  configure.com  descrip.mms  dotest.com  getpwnam.c  grconvert.mms  make.conf-common  make.dep_cephes  make.dep_src  readme  src.mms  t1lib.mms  t1lib_t1lib.mms  t1lib_type1.mms  vms_unix.c  vms_unix.h  xbae.mms
arch/win32/: README
auxiliary/: .cvsignore  Makefile  README  convcal.c  grace_setup.iss  runconfigure  rungrace.bat  runhelpviewer.bat
cephes/: Make.common  Make.dep  Makefile  cbrt.c  cephes.h  const.c  ellpk.c  gamma.c  hyperg.c  isfinite.c  isnan.c  log2.c  mconf.h  mtherr.c  ndtri.c  unity.c
conf/: Make.conf.in  config.h.in  configure.in  generic  generic.gcc  ix86-cygwin32  ix86-linux  linux  mips-irix6.4  opennt  sparc-sunos4  sparc-sunos5.gcc
doc/: .cvsignore  7.1.3.agr  CHANGES.html  FAQ.html  FAQ.sgml  MIGRATION.html  Makefile  NEWS.html  Tutorial.sgml  UsersGuide.sgml  commands.html  data.html  file.html  fonts.html  grace.1  guide.html  intro.html  sets.html  trans.html  usage.html
examples/: Makefile  axes.agr  bar.agr  boxplot.agr  chartebar.agr  diode.xgr  dotest  explain.agr  fills.agr  logistic.agr  moresyms.agr  motif.agr  pie.agr  regions.par  slideshow.d  stackedb.agr  terr.agr  terr2.agr  test.com  test2.agr  tfonts.agr  tinset.agr  tmc.c  tstack.agr  txyr.agr
expat/: Make.common  Makefile  README  expat_config.h
fonts/: Makefile
fonts/enc/: IsoLatin1.enc  IsoLatin2.enc
fonts/type1/: s050000l.afm  s050000l.pfb
grace_np/: .cvsignore  Makefile  grace_np.c  grace_np.h  gracef_np.c  test_np.c  testf_np.f
grconvert/: .cvsignore  Makefile  defaults.c  util.c  writeasc.c
include/grace/: base.h  baseP.h  canvas.h  canvasP.h  core.h  coreP.h  graal.h  graalP.h  grace.h  graceP.h  plot.h  plotP.h
lib/base/: Make.defs  alloca.c  amemory.c  darray.c  dates.c  dict3.c  files.c  memory.c  missing.c  storage.c  utils.c  xfile.c
lib/canvas/: Make.defs  Makefile  device.c  draw.c  dummydrv.c  emfdrv.c  hpdfdrv.c  jpgdrv.c  mfdrv.c  mifdrv.c  patterns.h  pdfdrv.c  pngdrv.c  pnmdrv.c  psdrv.c  qtdrv.c  svgdrv.c  t1fonts.c  xrstdrv.c  xrstdrv.h
lib/core/: Make.defs  atext.c  axis.c  container.c  ctrans.c  dobject.c  frame.c  graph.c  project.c  qfactory.c  quark.c  region.c  set.c  ssd.c  utils.c
lib/graal/: .cvsignore  Make.defs  graal.c  graal.l  graal.y
lib/grace/: .cvsignore  Make.defs  dates.c  dicts.c  grace.c  grace.xcc  paths.c  typeset.c  xml_out.c
lib/plot/: Make.defs  drawobj.c  drawticks.c  plotone.c  utils.c
lib/qtgrace/: Makefile  canvaswidget.cpp  canvaswidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtdrv.cpp  qtgrace.cpp  qtgrace.h  qtgrace.pro
patches/: gd1.3.patch  libharu-2.2.1.patch  pdflib-0.6.patch  sgmltools.patch  t1lib-1.2.patch
scripts/: cvs2cl.pl  makerelease
src/: .cvsignore  ListTree.c  ListTree.h  ListTreeP.h  Make.common  Make.dep  Makefile  Tab.c  Tab.h  XMgrace.ad  alloca.c  as274c.c  as274c.h  atext_ui.c  axis_ui.c  bi.c  bitmaps.h  buildinfo.c  cbitmaps.h  compute.c  computils.c  compwin.c  comwin.c  core_utils.h  ctrans.c  ctrans.h  darray.c  dates.c  defaults.c  defines.h  device.c  device.h  devlist.h  dict3.c  dict3.h  dicts.c  dicts.h  dlmodule.c  dlmodule.h  dobject_ui.c  (+136 more)
src/qtgui/: Makefile  canvaswidget.cpp  canvaswidget.h  fileselectiondialog.cpp  fileselectiondialog.h  fileselectiondialog.ui  filterlineedit.cpp  filterlineedit.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt.cpp  qtdrv.cpp  qtgrace.cpp  qtgrace.h  qtgrace.pro  qtinc.h  qtutil.cpp
templates/: Default.agr  Default.xgr  Makefile
tests/: Makefile  check_grace.c  check_grace.cpp  check_lib.cpp
